fix wrong spacing

--- a/css/elements.css
+++ b/css/elements.css
@@ -59,10 +59,12 @@ blockquote {
 pre {
   background-color: #333;
   color: #fff;
+  padding: 0.4em;
 }
   pre code {
     background-color: transparent;
     color: inherit;
+    padding: 0;
   }
 
 :where(:link, :visited) {
